# FarmNet

./: Makefile  README.md  pyproject.toml
examples/: kelmarsh.toml  pipeline_kelmarsh.py  train_kelmarsh.py
farmnet/: postpro.py
farmnet/data/: data_store.py  wranglers.py
farmnet/data/datasets/: graph_gen.py  kelmarsh.py  utils.py
farmnet/model/: gnn.py  hparam_tune.py  train.py
openimpact/model/: train.py
tests/: conftest.py  test_config.py  test_gnn.py  test_preprocessing.py  test_wrangler.py
