[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farmnet"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Florian Hammer", email = "florian.hammer@ost.ch" }]
maintainers = [{ name = "Florian Hammer", email = "florian.hammer@ost.ch" }]
dependencies = [
    "haversine>=2.9.0",
    "lightning>=2.5.0.post0",
    "mlflow-skinny>=2.20.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyproj>=3.7.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
]
description = "Placeholder for brief description"
copyright = "Florian Hammer"
license = { file = "LICENSE" }
dynamic = ["version"]


[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "hatch>=1.14.0",
  "jupytext",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.2",
]

docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''

[tool.hatch.version]
path = "farmnet/__about__.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=farmnet --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.coverage.run]
branch = true
parallel = true
omit = ["farmnet/__about__.py"]

[tool.pytest.ini_options]
filterwarnings = ["ignore", "default:::farmnet"]

